# Daily-Review

./: README.md  build_errors.txt  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build_error.txt  build_log.txt  build_log_3.txt  build_log_daemon.txt  check_error.txt  compile_log.txt  compile_log_2.txt  daily_assistant.db  setup-env.ps1  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
