[package]
name = "daily-assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "da"

[[bin]]
name = "da"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "daily_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.48.0", features = ["full"] }
# git2 removed to avoid build issues
reqwest = { version = "0.12.26", features = ["json"] }
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4.42"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }
